--- a/client/src/components/QuoteComponent/quote.css
+++ b/client/src/components/QuoteComponent/quote.css
@@ -75,7 +75,7 @@
     transition: background-color 0.2s ease-in-out;
   }
   
- 
+
 
 .vote-icons {
   display: flex;
@@ -84,4 +84,25 @@
   flex-direction: column;
   margin-right: 20px;
 }
+
+.create-button {
+  display: none;
+}
+
+.create-button.show {
+  display: block;
+  animation: fadeIn 0.5s ease-in-out;
+  transition: transform 0.2s ease-out;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+
 
