--- a/client/src/components/LoginComponent/login.css
+++ b/client/src/components/LoginComponent/login.css
@@ -1,74 +1,109 @@
 .login-container {
-    width: 300px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
-
-    animation-name: fadeIn;
-    animation-duration: 1s;
+  width: 300px;
+  padding: 30px;
+  position: relative;
+  height: 300px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  flex-direction: column;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  animation-name: fadeIn;
+  animation-duration: 1s;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
 }
 
 
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+
+input {
+  width: 100%;
+  padding: 15px 20px 15px 40px;
+  font-size: 18px;
+  border: 1px solid #ccc;
+  border: none;
+  border-radius: 5px;
 }
-  
-  .login-container h1 {
-    text-align: center;
-    margin-bottom: 20px;
-    font-size: 24px;
-    color: #333;
-  }
-  
-  .login-container div {
-    margin-bottom: 10px;
-  }
-  
-  .login-container input {
-    width: 100%;
-    padding: 15px; 
-    font-size: 18px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  .login-container button {
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    border: none;
-    border-radius: 5px;
-    background-color: #007bff;
-    color: #fff;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .login-container button:hover {
-    background-color: #0056b3;
-  }
-  
- 
-  
-  
-  /* Animation for Input Fields */
-  .login-container input {
-    transition: border-color 0.3s ease;
-  }
-  
-  .login-container input:focus {
-    outline: none;
-    border-color: #007bff;
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
-  }
-  
-  /* Add more animations to make it cooler and unique! */
-  
+
+
+
+
+.login-button-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.login-button {
+  width: 100%; 
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  background-color: #1abc9c;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.login-button:hover {
+  background-color: #16a085;
+  transform: scale(1.05);
+}
+
+.avatar-container {
+  text-align: center;
+  position: absolute; 
+  top: -55px;
+  left: 50%;
+  transform: translateX(-50%);
+
+}
+
+
+.avatar-icon {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 100px;
+  height: 100px;
+  background-color: #1abc9c;
+  border-radius: 50%;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  position: relative;
+}
+
+.avatar-icon svg {
+  width: 80px;
+  color: #fff;
+  height: 80px;
+}
+
+
+.input-container {
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.input-icon {
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  transform: translateY(-50%);
+  color: #555;
+  z-index: 2;
+}
+
+
+.login-container input:focus {
+  outline: none; 
+}
+
+hr {
+  border-color: #b8b2b2a3;
+}
