--- a/client/src/components/QuoteComponent/quote.css
+++ b/client/src/components/QuoteComponent/quote.css
@@ -64,7 +64,7 @@
 }
 
 .log-out-button {
-    background-color: #007bff;
+  background-color: #1abc9c;
     margin-top: 10px;
     color: white;
     border: none;
